--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.22.2",
+    "axios": "^0.27.2",
     "craco-less": "^2.1.0-alpha.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
