--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "antd": "^4.22.2",
     "axios": "^0.27.2",
     "craco-less": "^2.1.0-alpha.0",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "store": "^2.0.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +42,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "allowedHosts": "All"
 }
